fix: removed font bug and visible lateral bars

--- a/templates/swissen2/css/pdf.css
+++ b/templates/swissen2/css/pdf.css
@@ -8,6 +8,8 @@ body.pdf {
     
     .container {
         background: none;
+        border-left-color: white;
+        border-right-color: white;
     }
 
     .date:after{
